--- a/client/htmls/doxx.html
+++ b/client/htmls/doxx.html
@@ -22,6 +22,8 @@
     <div class="container" role="main">
         {{> yield}}
     </div>
+
+    {{> modal_upload}}
 </template>
 
 
@@ -34,12 +36,12 @@
         DOXX
     </a>
 
-    <a href="" class="sign-up">Sign Up</a>
+    <label for="modal-upload">
+        <a href="" class="upload btn js-btn">Upload</a>
+    </label>
   </div>
 </header>
 </template>
-
-
 
 
 
@@ -77,4 +79,3 @@
    </header>
 </section>
 </template>
-
