--- a/client/htmls/doxx.html
+++ b/client/htmls/doxx.html
@@ -1,6 +1,11 @@
 <head>
   <title>DoXX</title>
 
+  <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
+
+  <!--
     <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cardo:400,700' rel='stylesheet' type='text/css'>
 
@@ -12,6 +17,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=PT+Mono&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    -->
 
 </head>
 
@@ -36,9 +42,11 @@
         DOXX
     </a>
 
-    <label for="modal-upload">
-        <a href="" class="upload btn js-btn">Upload</a>
-    </label>
+    <div class="modal">
+        <label for="modal-upload">
+            <div class="upload btn js-btn">Upload</div>
+        </label>
+    </div>
   </div>
 </header>
 </template>
