POC of Post with Embedly support

--- a/client/utils/utils.html
+++ b/client/utils/utils.html
@@ -1,3 +1,8 @@
+<!-- Responsive video tag -->
 <template name="video">
-
+<div class="video">
+  <div class="video-wrapper">
+    {{> UI.contentBlock }}
+  </div>
+</div>
 </template>
