--- a/client/htmls/doxx.html
+++ b/client/htmls/doxx.html
@@ -5,7 +5,6 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
 
-  <!--
     <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cardo:400,700' rel='stylesheet' type='text/css'>
 
@@ -17,7 +16,6 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=PT+Mono&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    -->
 
 </head>
 
@@ -37,16 +35,11 @@
 <template name="header">
 <header class="navigation">
   <div class="menu-wrapper">
-    <div class="menu-button" alt="menu"></div>
+    <div class="menu-btn " alt="menu"></div>
     <a href="" class="logo nostyle">
         DOXX
     </a>
-
-    <div class="modal">
-        <label for="modal-upload">
-            <div class="upload btn js-btn">Upload</div>
-        </label>
-    </div>
+    <label for="modal-upload" class="upload-dialog-btn">Upload</label>
   </div>
 </header>
 </template>
