Added default accounts support. Fixed more scss, added tags and other minimal progress

--- a/client/htmls/doxx.html
+++ b/client/htmls/doxx.html
@@ -44,7 +44,10 @@
     <a href="" class="logo nostyle">
         DOXX
     </a>
-    <label for="modal-upload" class="upload-dialog-btn">Upload</label>
+    <div class="right-menu">
+        <label for="modal-upload" class="upload-dialog-btn">Upload</label>
+        {{> loginButtons align="right"}}
+    </div>
   </div>
 </header>
 </template>
