--- a/client/htmls/doxx.html
+++ b/client/htmls/doxx.html
@@ -13,7 +13,7 @@
     <link href='http://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
 
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=PT+Mono&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Terminal+Dosis:300,500,700' rel='stylesheet' type='text/css'>
@@ -30,9 +30,7 @@
 
     {{> modal_upload}}
 
-    {{#if is_admin and is_debugger_enabled }}
-        {{> session_debug}}
-    {{/if}}
+    {{> yield region="footer"}}
 </template>
 
 
@@ -41,12 +39,14 @@
 <header class="navigation">
   <div class="menu-wrapper">
     <div class="menu-btn " alt="menu"></div>
-    <a href="" class="logo nostyle">
-        DOXX
-    </a>
+    <a href="/" class="logo nostyle">DOXX</a>
     <div class="right-menu">
-        <label for="modal-upload" class="upload-dialog-btn">Upload</label>
-        {{> loginButtons align="right"}}
+        {{#if currentUser}}
+            <label for="modal-upload" class="upload-dialog-btn">Upload</label>
+            {{> loginButtons align="right"}}
+        {{else}}
+            {{> loginButtons align="right"}}
+        {{/if}}
     </div>
   </div>
 </header>
@@ -57,6 +57,13 @@
 
 <template name="footer">
     <footer class="footer">
+        <ul>
+            <li>FAQ</li>
+        </ul>
+
+        {{#if is_admin and is_debugger_enabled }}
+            {{> session_debug}}
+        {{/if}}
     </footer>
 </template>
 
