--- a/client/htmls/doxx.html
+++ b/client/htmls/doxx.html
@@ -5,10 +5,6 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
 
-    <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Cardo:400,700' rel='stylesheet' type='text/css'>
-
-
     <link href="//fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
 
@@ -39,7 +35,8 @@
 <header class="navigation">
   <div class="menu-wrapper">
     <div class="menu-btn " alt="menu"></div>
-    <a href="/" class="logo nostyle">DOXX</a>
+    <div class="header-title">{{ page_title }}</div>
+        <!-- <a href="/" class="logo nostyle">DOXX</a> -->
     <div class="right-menu">
         {{#if currentUser}}
             <label for="modal-upload" class="upload-dialog-btn">Upload</label>
