No progress. Sigh...

--- a/client/htmls/doxx.html
+++ b/client/htmls/doxx.html
@@ -11,6 +11,7 @@
 </head>
 
 <template name="page">
+<section class="page-body">
     <div class="bg">
         <div id="name" class="gradient"></div>
     </div>
@@ -22,6 +23,7 @@
 
     {{> modal_upload}}
     {{> yield region="footer"}}
+</section>
 </template>
 
 
