Ok, fixed channels form, adding mockdata of all posts

--- a/client/htmls/doxx.html
+++ b/client/htmls/doxx.html
@@ -31,7 +31,7 @@
 <template name="header">
 <header class="navigation">
   <div class="menu-wrapper">
-    <div class="menu-btn " alt="menu"></div>
+    <a href="/"><div class="menu-btn " alt="menu"></div></a>
     <div class="header-title">{{ page_title }}</div>
         <!-- <a href="/" class="logo nostyle">DOXX</a> -->
     <div class="right-menu">
