--- a/client/htmls/doxx.html
+++ b/client/htmls/doxx.html
@@ -2,11 +2,15 @@
   <title>DoXX</title>
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
 
   <link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Sanchez:400italic,400' rel='stylesheet' type='text/css'>
 
   <link href="//fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet" type="text/css">
+
+  <meta name="viewport" content="initial-scale=1.0">
+  <link rel="shortcut icon" href="/img/favicon.ico">
 
 </head>
 
@@ -21,7 +25,11 @@
         {{> yield}}
     </div>
 
-    {{> modal_upload}}
+    {{#modal id="upload"}}
+        {{> upload}}
+    {{/modal}}
+    <div class="md-overlay"></div>
+
     {{> yield region="footer"}}
 </section>
 </template>
@@ -35,12 +43,7 @@
     <div class="header-title">{{ page_title }}</div>
         <!-- <a href="/" class="logo nostyle">DOXX</a> -->
     <div class="right-menu">
-        {{#if currentUser}}
-            <label for="modal-upload" class="upload-dialog-btn">Upload</label>
-            {{> loginButtons align="right"}}
-        {{else}}
-            {{> loginButtons align="right"}}
-        {{/if}}
+        {{> userMenu }}
     </div>
   </div>
 </header>
@@ -55,7 +58,7 @@
             <li>FAQ</li>
         </ul>
 
-        {{#if is_admin and is_debugger_enabled }}
+        {{#if isAdmin and isDebuggerEnabled }}
             {{> session_debug}}
         {{/if}}
     </footer>
